# Haven-App

./: .gitignore  CLAUDE.md  LICENSE  MARMOT_PROTOCOL_KNOWLEDGE.md  README.md  zapstore.yaml
.cargo/: config.toml
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: android-build.yml  audit.yml  avatar-privacy-guard.yml  build-check.yml  check-no-committed-secrets.yml  ci.yml  claude-code-review.yml  coverage.yml  cross-check.yml  e2e-android.yml  e2e-background-catchup.yml  e2e-flakiness-stress.yml  e2e-flakiness.yml  e2e-harness-selftest.yml  e2e-integration.yml  e2e-ios.yml  e2e-live-sync.yml  e2e-m7-background.yml  e2e-nightly.yml  e2e-profile.yml  e2e-relay-customization.yml  flutter-check.yml  internet-permission-check.yml  ios-build.yml  ios-certificates.yml  l10n-ai-review.yml  l10n-check.yml  m7-native-wake-check.yml  profile-privacy-guard.yml  release-build.yml  repo-guards.yml  rust-check.yml  tile-provider-check.yml
docs/: E2E_TROUBLESHOOTING.md  ENCRYPTION.md  FLUTTER_RUST_BRIDGE.md  M7_BACKGROUND_SHARING.md  PUBLIC_PROFILE_MIGRATION_PLAN.md
haven/: .gitignore  DEVELOPMENT.md  analysis_options.yaml  flutter_rust_bridge.yaml  l10n.yaml  pubspec.yaml
haven-core/: Cargo.toml  SECURITY.md  clippy.toml  lcov.info
haven-core/.cargo/: audit.toml
haven-core/docs/: SESSION_SUMMARY_2026-01-29.md
haven-core/src/: api.rs  frb_generated.rs  keyring_policy.rs  lib.rs  util.rs  validation.rs  write_lock.rs
haven-core/src/avatar/: chunk.rs  config.rs  error.rs  image.rs  manifest.rs  mod.rs
haven-core/src/circle/: avatar_reassembly.rs  converge.rs  error.rs  leave.rs  manager.rs  mod.rs  relay_prefs.rs  storage.rs  storage_avatar.rs  storage_key_packages.rs  storage_profile.rs  storage_relay_prefs.rs  types.rs
haven-core/src/location/: geohash.rs  mod.rs  nostr.rs  privacy.rs  ttl.rs  types.rs
haven-core/src/nostr/: error.rs  event.rs  giftwrap.rs  keys.rs  mod.rs  tags.rs
haven-core/src/nostr/encryption/: mod.rs
haven-core/src/nostr/identity/: keypair.rs  mod.rs  storage.rs
haven-core/src/nostr/mls/: context.rs  manager.rs  mod.rs  peek_crypto.rs  signer.rs  storage.rs  types.rs  welcome.rs
haven-core/src/profile/: blossom.rs  config.rs  consent.rs  error.rs  fetch.rs  merge.rs  mod.rs  parse.rs  picture_cache.rs  publish.rs  types.rs
haven-core/src/relay/: auto_commit.rs  catchup.rs  cursor.rs  discovery.rs  error.rs  manager.rs  mod.rs  publishers.rs  types.rs
haven-core/src/relay/live_sync/: autocommit.rs  config.rs  error.rs  event.rs  event_bus.rs  finalize.rs  gate.rs  health.rs  mod.rs  plan.rs  processor.rs  router.rs  session.rs  settle.rs  supervisor.rs
haven-core/src/relay/live_sync/planes/: group.rs  inbox.rs  mod.rs
haven-core/src/relay/maintenance/: key_package.rs  mod.rs  relay_list.rs
haven-core/src/tiles/: error.rs  mod.rs  storage.rs
haven-core/tests/: avatar_at_rest_test.rs  avatar_e2e_tests.rs  circle_integration_test.rs  circle_manager_concurrency.rs  dm_two_party_smoke_test.rs  key_package_signing_test.rs  live_sync_cursor_replay_e2e.rs  live_sync_engine_e2e_test.rs  live_sync_out_of_order_commit_e2e.rs  live_sync_privacy_config_e2e.rs  live_sync_two_engine_converge_e2e.rs  maintenance_per_relay_e2e_test.rs  mls_e2e_security_tests.rs  mls_integration_tests.rs  profile_blossom_integration_test.rs  profile_group_isolation_e2e.rs  profile_kind0_round_trip_e2e.rs  proptest_encryption.proptest-regressions  proptest_encryption.rs  proptest_location.proptest-regressions  proptest_location.rs  proptest_security.proptest-regressions  proptest_security.rs  relay_list_additional_tests.rs  relay_preferences_integration_test.rs  relay_ws_loopback_normalize_test.rs  selfremove_autopublish_e2e.rs  settle_window_real_relay_test.rs  settle_window_tuning_test.rs  sync_state_at_rest_test.rs  tile_at_rest_test.rs  zeroization_security.rs
haven-core/tests/helpers/: mod.rs
haven/android/: settings.gradle.kts
haven/android/app/: build.gradle.kts
haven/android/gradle/: gradle-daemon-jvm.properties
haven/assets/certs/: stadia_ca.pem
haven/assets/licenses/: odbl-1.0.txt
haven/dart_defines/: secrets.example.json
haven/integration_test/: app_test.dart  circle_admin_leave_ghost_test.dart  circle_service_remove_member_test.dart  encryption_pipeline_test.dart  ios_bg_mirror_test.dart  keyring_test.dart  m7_worker_disable_test.dart  m7_worker_pending_wipe_test.dart  m7_worker_setup_test.dart  relay_customization_publish_test.dart  relay_customization_trigger_test.dart  relay_resync_convergence_test.dart  relay_two_plane_privacy_test.dart
haven/integration_test/e2e/: e2e_combined.dart  e2e_profile_sharing.dart  scenario_01_identity_and_circle.dart  smoke_test.dart  (+4 more)
haven/ios/: ExportOptions.plist  Gemfile
haven/lib/: main.dart
haven/rust_builder/: Cargo.toml  pubspec.yaml
haven/rust_builder/android/: build.gradle  settings.gradle
haven/rust_builder/ios/: rust_lib_haven.podspec
haven/rust_builder/linux/: CMakeLists.txt
haven/rust_builder/macos/: rust_lib_haven.podspec
haven/rust_builder/src/: api.rs  frb_generated.rs  lib.rs  test_keyring.rs
haven/rust_builder/windows/: CMakeLists.txt
haven/test/: main_onboarding_migration_test.dart  widget_test.dart
scripts/: README.md  build_release.sh  coverage.sh  regenerate_frb.sh  run_e2e_local.sh
scripts/ci/: arb_parity_check.dart  check_avatar_privacy_boundaries.sh  check_coverage.sh  check_internet_permission.sh  check_ios_background_publish.sh  check_l10n_parity.sh  check_locale_privacy.sh  check_m7_native_wake_guards.sh  check_mdk_supply_chain.sh  check_no_committed_secrets.sh  check_no_exporter_label_override.sh  check_no_tile_cache_secrets.sh  check_profile_privacy_boundaries.sh  check_tile_provider.sh  gen_pseudo_arb.dart  install_git_hooks.sh  publish_zapstore.sh  setup_android_signing.sh
tooling/e2e/: blossom-server-config.yml  docker-compose.yml  run_two_users.sh  strfry.conf
tooling/e2e/local-blossom/: Cargo.toml
tooling/e2e/local-blossom/src/: main.rs
tooling/e2e/local-relay/: Cargo.toml
tooling/e2e/local-relay/src/: main.rs
(+460 files in other folders)
