[package]
name = "haven-core"
version = "0.1.0"
edition = "2021"
description = "Core library for Haven - private family location sharing"
license = "MIT"

[lib]
crate-type = ["lib"]

[features]
default = []
# Enables test utilities like unencrypted storage. DO NOT use in production.
# Propagates to mdk-sqlite-storage to expose MdkSqliteStorage::new_unencrypted().
# Also pulls in openmls_traits so test accessors can reach the OpenMLS storage
# provider (e.g. get_group_exporter_secret for MIP-03 lifecycle assertions).
test-utils = ["mdk-sqlite-storage/test-utils", "dep:openmls_traits"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Location
geohash = "0.13"
chrono = { version = "0.4", features = ["serde"] }

# Encoding
base64 = "0.22"
hex = "0.4"

# Logging (forwarded to Flutter via flutter_rust_bridge on mobile)
log = "0.4"

# Error handling
thiserror = "2.0"

# Nostr protocol
nostr = { version = "0.44", features = ["std", "nip44"] }

# MLS encryption (Marmot Development Kit)
mdk-core = { git = "https://github.com/parres-hq/mdk", rev = "93ae32479211d7a241ff379c34d3fe87ac161e7a" }
mdk-sqlite-storage = { git = "https://github.com/parres-hq/mdk", rev = "93ae32479211d7a241ff379c34d3fe87ac161e7a" }
mdk-storage-traits = { git = "https://github.com/parres-hq/mdk", rev = "93ae32479211d7a241ff379c34d3fe87ac161e7a" }

# OpenMLS traits — only needed for test-only accessors (feature = "test-utils")
# so they can call OpenMlsProvider::storage() through the trait. Kept optional
# so production builds never pull in this crate.
openmls_traits = { version = "0.5", default-features = false, optional = true }

# SQLite for local storage (circles, contacts)
# Note: Version must match mdk-sqlite-storage's rusqlite version
rusqlite = { version = "0.37", features = ["bundled"] }

# SQLCipher requires OpenSSL. For Android cross-compilation, we must bundle OpenSSL
# since Android NDK doesn't include OpenSSL headers. This unifies with mdk-sqlite-storage's
# libsqlite3-sys dependency, adding the vendored-openssl feature.
libsqlite3-sys = { version = "0.35", features = ["bundled-sqlcipher-vendored-openssl"] }

# Async runtime (required by MDK)
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "net", "time"] }

# Nostr relay communication
nostr-sdk = { version = "0.44", default-features = false, features = ["nip44", "nip59"] }

# Async utilities
futures = "0.3"

# Secure memory handling
zeroize = { version = "1.8", features = ["derive"] }

# Constant-time comparisons (for timing attack prevention)
subtle = "2.5"

# Cryptography
rand = "0.8"
sha2 = "0.10"

# Image processing (avatar pipeline: decode/strip/downscale/re-encode).
#
# `image` is ALSO a transitive dependency of mdk-core, which enables the
# features `["jpeg", "png", "webp", "gif"]`. Cargo feature unification means
# the `gif` codec (and any other feature mdk turns on) WILL compile in here
# regardless of what we declare — codec isolation by feature gating is NOT
# achievable and is therefore NOT relied on for security. The decode-bomb
# defense rests instead on (a) an explicit pre-decode byte-size cap and (b) an
# explicit format allowlist enforced in `avatar::image` BEFORE any bytes reach
# the decoder. We pin the same `0.25` line as mdk-core so unification resolves
# to one version, and disable default features (drops `rayon`, the heavier
# `avif`/`exr`/etc. codecs we never enable ourselves) — though unification with
# mdk still brings its set in.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

[dev-dependencies]
# Property-based testing
proptest = "1.5"
# Temporary directories for tests
tempfile = "3.10"
# EXIF parser — used ONLY in avatar tests to assert that the re-encode
# pipeline structurally strips all EXIF/GPS metadata (and as a positive
# control that the crafted test input *does* carry EXIF before stripping).
kamadak-exif = "0.5"
# Enable test-utils feature for integration tests
haven-core = { path = ".", features = ["test-utils"] }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

# Coverage Configuration
# Run coverage locally with:
#   cargo install cargo-llvm-cov  (one-time setup)
#   cargo llvm-cov --open         (run tests + view HTML report)
#   cargo llvm-cov --lcov         (generate lcov.info for CI/tools)
# CI enforces 80% minimum line coverage
