[package]
name = "haven-core"
version = "0.1.0"
edition = "2021"
description = "Core library for Haven - private family location sharing"
license = "MIT"

[lib]
crate-type = ["lib"]

[features]
default = []
# Enables test utilities like unencrypted storage. DO NOT use in production.
# Propagates to mdk-sqlite-storage to expose MdkSqliteStorage::new_unencrypted().
# (openmls_traits is now an unconditional dependency — the M8-2 live-material
# gate needs the OpenMLS StorageProvider trait in production too — so it no
# longer needs to be feature-activated here.)
test-utils = ["mdk-sqlite-storage/test-utils"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Location
geohash = "0.13"
chrono = { version = "0.4", features = ["serde"] }

# Encoding
base64 = "0.22"
hex = "0.4"

# Logging (forwarded to Flutter via flutter_rust_bridge on mobile)
log = "0.4"

# Error handling
thiserror = "2.0"

# Nostr protocol
nostr = { version = "0.44", features = ["std", "nip44"] }

# MLS encryption (Marmot Development Kit)
mdk-core = { git = "https://github.com/parres-hq/mdk", rev = "93ae32479211d7a241ff379c34d3fe87ac161e7a" }
mdk-sqlite-storage = { git = "https://github.com/parres-hq/mdk", rev = "93ae32479211d7a241ff379c34d3fe87ac161e7a" }
mdk-storage-traits = { git = "https://github.com/parres-hq/mdk", rev = "93ae32479211d7a241ff379c34d3fe87ac161e7a" }

# OpenMLS — the MLS engine MDK builds on. haven-core does NOT fork or patch MDK;
# it only calls the PUBLIC OpenMLS `StorageProvider` trait against MDK's `pub
# provider` for the M8-2 KeyPackage live-material gate (querying whether a
# published KeyPackage's private init-key material is still stored locally —
# MDK exposes no equivalent query at the pinned rev). These MUST resolve to the
# exact same crates.io versions mdk-core/mdk-sqlite-storage already lock
# (openmls 0.8.1 / openmls_traits 0.5) so cargo unifies them to a single crate
# instance — otherwise the storage backend types would not match. `cargo tree -i
# openmls` must show a single version.
openmls = { version = "0.8.1", default-features = false }
openmls_traits = { version = "0.5", default-features = false }

# Keyring (system credential store) — pulled transitively via mdk-sqlite-storage,
# declared here so `keyring_policy` can migrate the SQLCipher DB-key access policy
# on iOS. MUST resolve to the SAME version mdk already locks (0.7.4) so the global
# default store set in rust_builder is the same crate instance; `cargo tree -i
# keyring-core` confirms a single version.
keyring-core = "0.7"

# SQLite for local storage (circles, contacts)
# Note: Version must match mdk-sqlite-storage's rusqlite version
rusqlite = { version = "0.37", features = ["bundled"] }

# SQLCipher requires OpenSSL. For Android cross-compilation, we must bundle OpenSSL
# since Android NDK doesn't include OpenSSL headers. This unifies with mdk-sqlite-storage's
# libsqlite3-sys dependency, adding the vendored-openssl feature.
libsqlite3-sys = { version = "0.35", features = ["bundled-sqlcipher-vendored-openssl"] }

# Async runtime (required by MDK)
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "net", "time"] }

# Nostr relay communication
nostr-sdk = { version = "0.44", default-features = false, features = ["nip44", "nip59"] }

# Async utilities
futures = "0.3"

# Secure memory handling
zeroize = { version = "1.8", features = ["derive"] }

# Constant-time comparisons (for timing attack prevention)
subtle = "2.5"

# Cryptography
rand = "0.8"
sha2 = "0.10"

# ChaCha20-Poly1305 — the kind:445 outer-layer AEAD. Needed by the REV-1
# non-destructive content-type peek (`nostr::mls::peek_crypto`): MDK's decrypt
# routine is `pub(crate)` and unreachable downstream, so the peek carries a
# byte-for-byte copy to read a settle-window competitor's MLS `content_type`
# without a destructive trial-apply. Pinned to the SAME `0.10` line MDK locks
# (0.10.1) so cargo unifies to ONE crate instance — otherwise the AEAD would not
# byte-match MDK's and the peek/MDK decrypt-parity gate would break.
# `cargo tree -i chacha20poly1305` must show a single version.
chacha20poly1305 = "0.10"

# Image processing (avatar pipeline: decode/strip/downscale/re-encode).
#
# `image` is ALSO a transitive dependency of mdk-core, which enables the
# features `["jpeg", "png", "webp", "gif"]`. Cargo feature unification means
# the `gif` codec (and any other feature mdk turns on) WILL compile in here
# regardless of what we declare — codec isolation by feature gating is NOT
# achievable and is therefore NOT relied on for security. The decode-bomb
# defense rests instead on (a) an explicit pre-decode byte-size cap and (b) an
# explicit format allowlist enforced in `avatar::image` BEFORE any bytes reach
# the decoder. We pin the same `0.25` line as mdk-core so unification resolves
# to one version, and disable default features (drops `rayon`, the heavier
# `avif`/`exr`/etc. codecs we never enable ourselves) — though unification with
# mdk still brings its set in.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

[dev-dependencies]
# Property-based testing
proptest = "1.5"
# Temporary directories for tests
tempfile = "3.10"
# EXIF parser — used ONLY in avatar tests to assert that the re-encode
# pipeline structurally strips all EXIF/GPS metadata (and as a positive
# control that the crafted test input *does* carry EXIF before stripping).
kamadak-exif = "0.5"
# In-process Nostr relay for hermetic live-sync engine integration tests
# (proves the persistent receive engine connects, subscribes, receives, routes,
# and processes real `kind:445` events over a real socket). Dev-only.
nostr-relay-builder = "0.44"
# `#[tokio::test]` (the lib's tokio omits `macros`) + a publisher `Client` for
# the live-sync engine integration test. Dev-only.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
nostr-sdk = { version = "0.44", default-features = false, features = ["nip44", "nip59"] }
# Enable test-utils feature for integration tests
haven-core = { path = ".", features = ["test-utils"] }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

# Coverage Configuration
# Run coverage locally with:
#   cargo install cargo-llvm-cov  (one-time setup)
#   cargo llvm-cov --open         (run tests + view HTML report)
#   cargo llvm-cov --lcov         (generate lcov.info for CI/tools)
# CI enforces 80% minimum line coverage
