[package]
name = "haven-core"
version = "0.1.0"
edition = "2021"
description = "Core library for Haven - private family location sharing"
license = "MIT"

[lib]
crate-type = ["lib"]

[features]
default = []
# Enables test-only MLS storage construction (in-memory SQLCipher). DO NOT use
# in production. The Dark Matter `storage-sqlite` crate exposes
# `SqliteAccountStorage::in_memory()` as a public, un-gated constructor, so this
# feature no longer forwards to any upstream crate feature (the old
# `mdk-sqlite-storage/test-utils` is gone) ŌĆö it is now a Haven-local marker that
# gates `StorageConfig::in_memory_storage()` and the two-party in-memory session
# fixtures the integration tests build on it.
test-utils = []

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Location
geohash = "0.13"
chrono = { version = "0.4", features = ["serde"] }

# Encoding
base64 = "0.22"
hex = "0.4"

# Logging (forwarded to Flutter via flutter_rust_bridge on mobile)
log = "0.4"

# Error handling
thiserror = "2.0"

# Nostr protocol
nostr = { version = "0.44", features = ["std", "nip44"] }

# Marmot "Dark Matter" MLS stack (MDK v0.9.4, marmot-protocol/mdk).
#
# The old single-crate `mdk-core` was replaced upstream by a crate topology with
# no `mdk-core`: the CGKA engine (`cgka-engine`) drives an `AccountDeviceSession`
# (`cgka-session`) over SQLCipher storage (`storage-sqlite`); shared value types
# and traits live in `cgka-traits` (package `cgka-traits`, directory
# `crates/traits`); the Nostr kind-445/1059 outer-layer crypto and welcome
# gift-wrap live in `transport-nostr-peeler`. Haven keeps its own relay /
# subscription / cursor plane, so `transport-nostr-adapter` is deliberately NOT
# adopted, and `marmot-account` / `marmot-app` / `marmot-uniffi` are rejected
# (keyring / full-runtime / FFI overlap). `marmot-forensics` still enters the
# audit graph transitively ŌĆö `cgka-session` imports it unconditionally ŌĆö even
# though no `ForensicRecorder` is installed by default.
#
# Pinned to the RELEASED tag v0.9.4 (`e391adcŌĆ”`), never a master HEAD: the
# monorepo is `publish = false` and self-describes as "not semver-stable", so a
# released tag is the only acceptable supply-chain anchor. All five crates share
# ONE rev so the workspace resolves as a unit. A `cargo tree` supply-chain gate
# asserts the uniffi / quic / agent crates stay OUT of Haven's graph.
cgka-session = { git = "https://github.com/marmot-protocol/mdk", rev = "e391adc133a9b60e420da7a0446f014a180ac8d2" }
cgka-engine = { git = "https://github.com/marmot-protocol/mdk", rev = "e391adc133a9b60e420da7a0446f014a180ac8d2" }
cgka-traits = { git = "https://github.com/marmot-protocol/mdk", rev = "e391adc133a9b60e420da7a0446f014a180ac8d2" }
storage-sqlite = { git = "https://github.com/marmot-protocol/mdk", rev = "e391adc133a9b60e420da7a0446f014a180ac8d2" }
transport-nostr-peeler = { git = "https://github.com/marmot-protocol/mdk", rev = "e391adc133a9b60e420da7a0446f014a180ac8d2" }

# NOTE: the old direct `openmls` / `openmls_traits` deps were dropped. They
# existed only for the M8-2 KeyPackage live-material gate (OpenMLS
# `StorageProvider` trait). That gate is deleted in DM-2 (last-resort KP
# semantics dissolve its premise), and no other Haven code names OpenMLS types.
# openmls (~0.8.1, `extensions-draft-08`) now enters the graph solely through
# cgka-engine / storage-sqlite, unified to a single instance; `cargo tree -i
# openmls` must show one version.

# Keyring (system credential store) ŌĆö declared directly so `keyring_policy` and
# the MLS storage layer (`nostr::mls::storage`) can provision the SQLCipher
# passphrase and migrate the DB-key access policy on iOS. The Dark Matter stack
# does NOT depend on keyring-core (only the rejected `marmot-account` /
# `marmot-uniffi` crates do), so this pin is now fully Haven-owned; the 1.0 bump
# is deliberately NOT required. Kept at 0.7 so it stays ONE crate instance with
# the platform store installed in rust_builder; `cargo tree -i keyring-core`
# confirms a single version.
keyring-core = "0.7"

# SQLite for local storage (circles.db, tiles.db, and ŌĆö via storage-sqlite ŌĆö the
# MLS session.sqlite). Version MUST match the Dark Matter workspace's rusqlite
# (0.32 / libsqlite3-sys 0.30): libsqlite3-sys is a `links = "sqlite3"` crate, so
# exactly ONE version may exist in the dependency graph. The SQLCipher build is
# shared across all three databases.
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }

# SQLCipher requires OpenSSL. For Android cross-compilation, we must bundle OpenSSL
# since Android NDK doesn't include OpenSSL headers. Pinned to 0.30 to unify with
# storage-sqlite's libsqlite3-sys (one `links = "sqlite3"` version per graph);
# `cargo tree -i libsqlite3-sys` must show a single 0.30.x.
libsqlite3-sys = { version = "0.30", features = ["bundled-sqlcipher-vendored-openssl"] }

# Async runtime (required by MDK)
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "net", "time"] }

# Nostr relay communication
nostr-sdk = { version = "0.44", default-features = false, features = ["nip44", "nip59"] }

# Blossom (BUD-02/BUD-11) profile-picture upload + download are hand-rolled over
# `reqwest` directly (see `src/profile/blossom.rs`). The `nostr-blossom` crate
# was dropped: its `upload_blob` accepts only HTTP 200 and rejects the `201
# Created` a spec-compliant server returns for a NEW blob (BUD-02), which broke
# fresh uploads. Hand-rolling the BUD-02 PUT + BUD-11 kind-24242 auth (the
# migration plan's D9 contingency) removes that foot-gun and shrinks the
# dependency surface. The auth event is built with the pinned `nostr` crate and
# STANDARD base64 (the encoding deployed servers accept).

# Direct reqwest for the capped, streaming, anti-SSRF profile-picture UPLOAD +
# DOWNLOAD. `default-features = false` + `rustls-tls` + `stream` keeps the rustls
# 0.23 + ring + webpki-roots stack haven-core already ships ŌĆö zero `aws-lc-*`
# (the NDK cross-compile trap). Do NOT move to reqwest 0.13 / rustls-no-provider
# ŌĆö it would fork the TLS backend. Verify with `cargo tree -i reqwest` / `-i
# rustls` and `grep -c aws-lc Cargo.lock` after any bump.
reqwest = { version = "=0.12", default-features = false, features = ["rustls-tls", "stream"] }

# URL parsing/validation for the Blossom upload server + picture-download paths.
# Re-exported by `nostr` (`nostr::Url == url::Url`), declared directly so the
# profile module can name `url::Url` in its public signatures and Wave 3 (FFI)
# can construct one. Unifies with nostr's `url` (2.5) ŌĆö no new transitive stack,
# no aws-lc.
url = "2"

# Async utilities
futures = "0.3"

# Secure memory handling
zeroize = { version = "1.8", features = ["derive"] }

# Constant-time comparisons (for timing attack prevention)
subtle = "2.5"

# Cryptography
rand = "0.8"
sha2 = "0.10"

# NOTE: the direct `chacha20poly1305` dependency was removed in DM-2. Its only
# Haven consumer was the legacy REV-1 non-destructive content-type peek
# (`nostr::mls::peek_crypto`), which the Dark Matter peeler's public
# `peel_group_message` supersedes; that module is deleted. The kind-445
# outer-layer AEAD now lives entirely inside `transport-nostr-peeler`, which
# still pulls `chacha20poly1305` transitively on the workspace `0.10` line
# (`cargo tree -i chacha20poly1305` must still show a single version).

# Image processing (avatar pipeline: decode/strip/downscale/re-encode).
#
# The Dark Matter MLS stack has NO `image` dependency (unlike the old mdk-core,
# which pulled `image` with `["jpeg","png","webp","gif"]` and forced the `gif`
# codec in via feature unification). `image` is now Haven's OWN dependency with a
# minimal codec set. The decode-bomb defense does NOT rely on codec feature
# gating (an upstream could still re-enable codecs through unification): it rests
# on (a) an explicit pre-decode byte-size cap and (b) an explicit format
# allowlist enforced in `avatar::image` BEFORE any bytes reach the decoder.
# `default-features = false` drops `rayon` and the heavier avif/exr codecs.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

[dev-dependencies]
# HTTP mocking for the Blossom upload/download unit tests (M6, next wave).
mockito = "1.2"
# Property-based testing
proptest = "1.5"
# Temporary directories for tests
tempfile = "3.10"
# EXIF parser ŌĆö used ONLY in avatar tests to assert that the re-encode
# pipeline structurally strips all EXIF/GPS metadata (and as a positive
# control that the crafted test input *does* carry EXIF before stripping).
kamadak-exif = "0.5"
# In-process Nostr relay for hermetic live-sync engine integration tests
# (proves the persistent receive engine connects, subscribes, receives, routes,
# and processes real `kind:445` events over a real socket). Dev-only.
nostr-relay-builder = "0.44"
# `#[tokio::test]` (the lib's tokio omits `macros`) + a publisher `Client` for
# the live-sync engine integration test. Dev-only.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
nostr-sdk = { version = "0.44", default-features = false, features = ["nip44", "nip59"] }
# Enable test-utils feature for integration tests
haven-core = { path = ".", features = ["test-utils"] }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

# Coverage Configuration
# Run coverage locally with:
#   cargo install cargo-llvm-cov  (one-time setup)
#   cargo llvm-cov --open         (run tests + view HTML report)
#   cargo llvm-cov --lcov         (generate lcov.info for CI/tools)
# CI enforces 80% minimum line coverage
