[package]
name = "rust_lib_haven"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
haven-core = { path = "../../haven-core" }
flutter_rust_bridge = "=2.11.1"
nostr = { version = "0.44", features = ["std"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync"] }
zeroize = "1.8"
keyring-core = "0.7"
rand = "0.8"
hex = "0.4"
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "0.2", features = ["keychain"] }

[target.'cfg(target_os = "ios")'.dependencies]
apple-native-keyring-store = { version = "0.2", features = ["protected"] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus-secret-service-keyring-store = { version = "0.3", features = ["crypto-rust"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "0.5"

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = "0.5"
