[package]
name = "rust_lib_haven"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
haven-core = { path = "../../haven-core" }
flutter_rust_bridge = "=2.11.1"
nostr = { version = "0.44", features = ["std"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync"] }
zeroize = "1.8"
keyring-core = "0.7"
rand = "0.8"
hex = "0.4"
# Profile FFI (Wave 3a): `upload_profile_picture` takes a `&url::Url`, and the
# default Blossom server is parsed at the boundary. Same major (2.x) as
# haven-core so Cargo unifies to one `url` crate and the `Url` types match.
url = "2"
log = "0.4"

[dev-dependencies]
# In-process Nostr relay for hermetic real-FFI maintenance-orchestration tests
# (drives the actual `RelayManagerFfi::maintain_key_package` glue over a real
# socket — probe → decide → republish → 443-GC → record — not a hand-written
# mirror). Matches the pinned 0.44 nostr-sdk. Dev-only.
#
# Pinned to an EXACT patch (`=0.44.1`), NOT a caret range: a future `cargo
# update` resolving a different 0.44.x could split the `nostr` type graph from
# MDK's pinned rev and break the test build. Keep in lockstep with `nostr-sdk`.
nostr-relay-builder = "=0.44.1"
# A publisher `Client` for seeding events onto the MockRelay + `#[tokio::test]`
# (the crate's own tokio omits `macros`/`rt-multi-thread`). Dev-only. Exact-pinned
# for the same reason as `nostr-relay-builder` above.
nostr-sdk = { version = "=0.44.1", default-features = false, features = ["nip44", "nip59"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "0.2", features = ["keychain"] }

[target.'cfg(target_os = "ios")'.dependencies]
apple-native-keyring-store = { version = "0.2", features = ["protected"] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus-secret-service-keyring-store = { version = "0.3", features = ["crypto-rust"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "0.5"

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = "0.5"
# Installed BEFORE flutter_rust_bridge's own android_logger (init_once is
# first-call-wins via a shared OnceLock) so our per-target filter can drop the
# `keyring_core` target, which logs raw DB-key bytes at DEBUG. Cargo unifies
# this with FRB's android_logger into ONE instance (Cargo.lock currently
# resolves a single 0.15.1 shared by frb =2.11.1), so the shared OnceLock makes
# FRB's later call a no-op. If a future `cargo update` ever split the version,
# the U1 CI secret-scan is the backstop. See `init_app` in src/api.rs.
android_logger = "0.15"
